@@ -9,6 +9,7 @@ All:
 
 - Fixed wxScopeGuard to work with VC++, documented it.
 - Fixed proxy handling in wxURL.
+- Added wxZipFSHandler::Cleanup() (Stas Sergeev)
 
 All (GUI):
 
